--- a/css/styles.css
+++ b/css/styles.css
@@ -309,10 +309,23 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding: 32px 0;
   text-align: center;
-  margin-bottom: 8px;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
+   padding: 24px 0 24px 0;
+   margin-top: 0;
+}
 
+.team-item .text-team{
+  font-weight: 400; 
+   font-size: 16px;
+   line-height: 24px; 
+   letter-spacing: 0.02em;
+    margin-bottom: 0px;
+   
+ 
+  
 }
 
 .team-list {
@@ -366,6 +379,8 @@ p {
   gap: 24px;
 }
 
+
+
 .social-item {
   width: 40px;
   height: 40px;
@@ -418,6 +433,9 @@ p {
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.value-text{
+    text-align: left;
+  }
 .card-thumb {
   position: relative;
   overflow: hidden;
@@ -432,7 +450,7 @@ p {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--footer-text-color, #f4f4fd);
+  color: #f4f4fd;
   background-color: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -464,14 +482,14 @@ p {
 
 .footer-logo-wrapper {
   max-width: 264px;
+  margin-top: 40px;
+  text-align: left;
 }
 
 .footer-container {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 120px;
-  padding: 40px 0;
   align-items: center;
   text-align: center;
 }
@@ -483,17 +501,18 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--footer-text-color, #ffffff);
-  margin-bottom: 16px;
-   flex: 1 1 100%;
+  flex: 1 1 100%;
+  margin-bottom: 24px; 
+text-align: left;
 }
 
 .social-list {
   display: flex;
   gap: 16px;
-   flex: 1 1 100%;
+  flex: 1 1 100%;
    list-style: none;
-  padding: 0;
-  margin: 0;
+  margin-top: 0;
+  
 }
 
 .social-link {
@@ -508,8 +527,11 @@ p {
   cursor: pointer;
   border: none;
   outline: none;
-}
 
+}
+.social-section{
+  padding-top: 0;
+}
 
 .social-link:hover,
 .social-link:focus {
@@ -534,9 +556,9 @@ p {
   color: #FFFFFF;
 }
 
-.footer-links .footer-logo-wrapper {
+/*.footer-links .footer-logo-wrapper {
   margin-left: 156px;
-}
+}*/
 
 .footer-logo {
   font-family: 'Raleway', sans-serif;
@@ -668,9 +690,7 @@ p {
 
 
 .form-container {
-  max-width: 320px;
-  flex: 1 1 300px;
-   display: flex;
+  display: flex;
   flex-direction: column;
   gap: 16px;
 }
@@ -682,6 +702,7 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  text-align: left;
 }
 
 .subscribe-form {
@@ -994,11 +1015,24 @@ margin-bottom: 16px
     display: flex;
     
   }
-
+.mobile-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  gap: 40px; 
+  
+}
 .container {
     max-width: 100%;   
     padding-left: 16px; 
     padding-right: 16px;
+  }
+
+  .hero {  
+  background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+   ), url(../images/hero.jpg);
   }
  
 
@@ -1079,11 +1113,11 @@ position: absolute;
 
 
 .mobile-nav-list {
-  margin-top: 72px;
   list-style: none;
   padding-left: 16px;
   flex-direction: column;
   gap: 40px;
+  margin-top: 72px;
    
 }
 
@@ -1101,14 +1135,16 @@ position: absolute;
 }
 .mobile-nav-list,
 .mobile-contact {
-  flex-direction: column;}
+  flex-direction: column;
+
+}
 
 .mobile-contact {
-  margin-top: 440px;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 24px;
   margin-left: 16px;
+  margin-top: 72px;
   
 }
 
@@ -1118,6 +1154,7 @@ position: absolute;
   color: rgba(77, 90, 229, 1);
   text-decoration: none;
   flex-direction: column;
+  margin-top: 96px;
 }
 
 
@@ -1131,12 +1168,13 @@ position: absolute;
 
 .mobile-social-icons {
   
-  margin-top: 560px;
   display: flex;
   gap: 40px;
   color:   rgba(77, 90, 229, 1);
   opacity: 1;
- 
+   
+margin-left: 16px;
+margin-right: 16px;
 
 }
 
@@ -1180,7 +1218,7 @@ text-align:  center;
   margin-right: 16px;
   display: grid;
   grid-template-columns: 1fr;
-  gap: 32px;
+  gap: 72px;
   max-width: 100%;
 }
 .values-list li{
@@ -1197,9 +1235,10 @@ text-align:  center;
 .icon-box{
   display: none;
 }
-.value-title {
-    font-weight: 700;   
+.value-title-title {
+    font-weight: 700;    
     font-size: 36px;
+    line-height: 40px;
    text-align: center;
     margin-bottom: 0;
 
@@ -1210,6 +1249,7 @@ text-align:  center;
    height: 72px;
    line-height: 24px; 
    letter-spacing: 0.02em; 
+   text-align: left;
 }
 
  
@@ -1219,10 +1259,13 @@ text-align:  center;
   height: 2232px;
   
 }
-  .team-item {
+
+ .team .team-item {
   width: 100%;
+  max-width: 264px;
+  max-height: 428px;
   }
-    
+      
 .agree-checkbox:checked:active,
 .mobile-social-icons .social-icon:active  {
   background-color: #404bbf;
@@ -1233,10 +1276,10 @@ text-align:  center;
 .list-item {
     width: 100%;
   }
-.footer-container {
- height: 664px;
- width: 320px;
+.portfolio-list .portfolio-item {
+  max-width: 288px;
 }
+
 
 .footer-logo
  {
@@ -1278,34 +1321,68 @@ width: 90vw;
   flex-wrap: wrap;  
   flex: 0 1 calc((100% - 24px) / 2); 
   box-sizing: border-box;
+  height: 664px;
+ width: 320px;
+}
+
+.social-section{
+   margin-left: 36px;
+  
+     
+       
 }
 }
 
+
+@media (min-resolution: 2x){
+  .hero {
+  background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+   ), url(../images/hero-tab-bg@2x.jpg);
+  }
+  }
 
 
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
+    
   
   
-  .container {
-    max-width: 100%;   
-    padding-left: 16px; 
-  }
-  
-
-  .contact-list,
-  .nav-list   {
+  .nav-list     {
     display: flex;
     gap: 40px;
+    margin-left: 116px;        
   }
 
   .mobile-menu,
   .mobile-menu-toggle {
     display: none;
   }
-  
+
+  .container {
+    margin-left: 16px; 
+    justify-content: space-between;
+    gap: 8px; 
+  }
+  .hero {  
+  background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+   ), url(../images/hero.jpg);
+  }
+.contact-list a{
+
+ margin-right: 164px;
+ height: 14px;
+ gap: 0;
+ padding: 4px;
+  }
+
   
 
+  
+  
   .hero-title {
 max-width: 496px;
 max-height: 120px;
@@ -1325,12 +1402,14 @@ max-height: 120px;
   display: none;
 }
 .value-title {
-    font-weight: 700;    
-    font-size: 36px;
-   text-align: center;
+    font-weight: 500;    
+    font-size: 20px;
+    line-height: 24px;
+   text-align: left;
     margin-bottom: 0;
 
   }
+  
   .team{
 width: auto;
 height:1224px ;
@@ -1349,12 +1428,17 @@ height:1224px ;
   .team-item {
     width: calc((100% - 24px) / 2); 
     box-sizing: border-box;
+    width: 100%;
+    margin-bottom: 40px; 
   }
 
   .portfolio-list{
 width: auto;
 height:auto;
  
+}
+.portfolio-list .portfolio-item {
+  max-width: 356px;
 }
 
   .portfolio-list li,
@@ -1363,25 +1447,38 @@ height:auto;
     justify-content: center;
      width: calc((100% - 24px) / 2); 
     box-sizing: border-box;
+    margin-bottom: 40px;
+  }
+  .value-text{
+    text-align: left;
   }
   
-  .footer-container{
+    .footer-container{
     flex-wrap: wrap;  
-  flex: 0 1 calc((100% - 24px) / 2);
+  /*flex: 0 1 calc((100% - 24px) / 2); /* два элемента в ряд */
   box-sizing: border-box;
     margin-left: 108px;
-   
-  }
- .form-container{
- margin-left: 108px;
- display: flex;
-  flex-wrap: wrap; 
+   gap: 20px;
 
- }
- 
+  }
+ .social-section{
+flex-wrap: wrap;
+padding-right: 384px;
+}
+.social-title {
+  text-align: left;
+  margin-bottom: 16px;
+}
+
+.social-list {
+margin: 0;
+padding: 0;
+padding-top: 16px;
+
 }
 
 
+}
 @media screen and (min-width: 1158px) {
 .nav-list,
 .contact-list {
@@ -1395,7 +1492,13 @@ height:auto;
   }
 }
 
+@media (min-resolution: 2x){
+  .hero {
+  background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)
+   ), url(../images/hero@2x.jpg);
+  }
+  }
 
 
-
-  
